[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="fastcloudinit"
dynamic = ["version"]
description = "Simplified opinionated cloud init for ubuntu"
readme = "README.md"
requires-python=">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/fastcloudinit"
Documentation = "https://AnswerDotAI.github.io/fastcloudinit"

[project.entry-points.nbdev]
fastcloudinit = "fastcloudinit._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastcloudinit.__version__"}

[tool.setuptools.packages.find]
include = ["fastcloudinit"]

[tool.nbdev]
custom_sidebar = false
